# ice-study

./: .gitignore  Cargo.toml  README.md  clean.sh  cxtk.db  main.py  requirements.txt  requirements_win.txt
.github/ISSUE_TEMPLATE/: bug_report.md
core/: api.py  args.py  error.py  ice.py  mod.py  update.py
core/crates/: Config.py  Http.py  Log.py  Logo.py  Progress.py  Tprogress.py  Version.py  test.py
core/crates/Linux/: Logo_linux.py  Logo_linux.sh  Logo_win.py
model/: course.py  courses.py  enc.py  user.py
plug/: Plug.py  hello_world.py  xxqg.py  xxqg.py_
src/: lib.rs  main.rs
